deploy/manifests/rvz/base/machine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine
  template:
    metadata:
      labels:
        app: machine
      annotations:
        sidecar.opentelemetry.io/inject: "rvz-machine-otlp-collector"
    spec:
      containers:
        - name: rvz-machine
          image: go-engine-image
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: services-config
              mountPath: /build/services
              readOnly: true
      volumes:
        - name: services-config
          configMap:
            name: services-cm
